--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -219,7 +219,7 @@ network.host: localhost
 
 # Set a custom port to listen for HTTP traffic:
 #
-# http.port: 9200
+http.port: 9200
 
 # Set a custom allowed content length:
 #
